--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,3 +1,4 @@
+/*
 plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
@@ -26,7 +27,21 @@ android {
         jvmTarget = '1.8'
     }
 }
+*/
 
+apply from: '../commonModule.gradle'
+apply from: '../unitTestConfiguration.gradle'
+
+dependencies {
+    api view.glide
+    api view.material
+
+    implementation test.kotest
+    implementation test.mockk
+    implementation serialization.gson
+}
+
+/*
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -35,4 +50,4 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-}
+}*/
