--- a/f-splash/build.gradle
+++ b/f-splash/build.gradle
@@ -1,4 +1,4 @@
-plugins {
+/*plugins {
     id 'com.android.library'
     id 'org.jetbrains.kotlin.android'
 }
@@ -27,11 +27,14 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-}
+}*/
+apply from:'../commonFeatureModule.gradle'
+apply from: '../commonKaptModule.gradle'
+apply from: '../unitTestConfiguration.gradle'
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+/*    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
@@ -39,5 +42,5 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'*/
 }
