--- a/commonKaptModule.gradle
+++ b/commonKaptModule.gradle
@@ -1,10 +1,10 @@
 /*
-* Dagger 2 & kapt.
+* Hilt & kapt.
 * Should be applied to every module with DI included.
 */
-apply plugin: 'kotlin-kapt'
+apply plugin: 'dagger.hilt.android.plugin'
 
 dependencies {
-    implementation di.dagger
-    kapt di.daggerKapt
+    implementation di.hilt
+    annotationProcessor di.hiltCompiler
 }
