--- a/base/build.gradle
+++ b/base/build.gradle
@@ -1,35 +1,5 @@
-/*
-plugins {
-    id 'com.android.library'
-    id 'org.jetbrains.kotlin.android'
-}
-
-android {
-    compileSdk 32
-
-    defaultConfig {
-        minSdk 23
-        targetSdk 32
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-*/
-
 apply from: '../commonModule.gradle'
+apply from: '../commonKaptModule.gradle'
 apply from: '../unitTestConfiguration.gradle'
 
 dependencies {
@@ -39,15 +9,13 @@ dependencies {
     implementation test.kotest
     implementation test.mockk
     implementation serialization.gson
-}
 
-/*
-dependencies {
-
+    // вынести в конфиг
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-}*/
+
+    // MVI
+    implementation 'ru.surfstudio.mvi:mvi-core:0.0.8'
+    implementation 'ru.surfstudio.mvi:mvi-mappers:0.0.8'
+}
