--- a/f_auth/src/main/AndroidManifest.xml
+++ b/f_auth/src/main/AndroidManifest.xml
@@ -1,4 +1,2 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest package="com.litreview.f_auth">
-
-</manifest>
+<manifest package="com.litreview.f_auth"/>
