--- a/commonModule.gradle
+++ b/commonModule.gradle
@@ -63,5 +63,10 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
 
+    // viewBinding
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
+
+    // navigation components
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
 }
