--- a/settings.gradle
+++ b/settings.gradle
@@ -2,6 +2,10 @@ apply from: 'config.gradle'
 
 include ':app',
         ':base',
-        ':f_main',
-        ':f_auth'
-include ':i_auth'
+        ':f_start',
+        ':f_auth',
+        ':i_auth',
+        ':f_main'
+include ':mylibrary'
+include ':f_book_detail'
+include ':i_navigation'
