--- a/commonAndroidDefaultConfig.gradle
+++ b/commonAndroidDefaultConfig.gradle
@@ -28,6 +28,14 @@ android {
     }
 }
 
+dependencies {
+    def nav_version = "2.3.3"
+
+    // Kotlin
+    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
+    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+}
+
 task printTestInstrumentationRunnerName {
     doLast {
         println "$android.defaultConfig.testInstrumentationRunner"
