--- a/commonFeatureModule.gradle
+++ b/commonFeatureModule.gradle
@@ -7,16 +7,8 @@ dependencies {
         }
     }
 
-    def nav_version = "2.4.2"
-
-    // Kotlin
-    implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
-    implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
-
-    // Feature module Support
-    implementation "androidx.navigation:navigation-dynamic-features-fragment:$nav_version"
-
     implementation "androidx.core:core-ktx:1.7.0"
 
     implementation project(":base")
+    implementation project(":i_navigation")
 }
