--- a/f_start/src/main/AndroidManifest.xml
+++ b/f_start/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.litreview.f_start">
 
-    <application>
+    <application android:name="com.litreview.base.App">
         <activity
             android:theme="@style/Theme.LitReview"
             android:name="com.litreview.f_start.MainActivity"
