--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,7 @@ dependencies {
     implementation project(':i_navigation')
     implementation project(':f_start')
     implementation project(':f_auth')
+    implementation project(':f_main')
     implementation project(':f_book_detail')
 
     implementation lang.kotlinStdLib
