--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,46 +1,3 @@
-/*
-plugins {
-    id 'com.android.application'
-    id 'org.jetbrains.kotlin.android'
-}
-
-android {
-    compileSdk 32
-
-    defaultConfig {
-        applicationId "com.litreview"
-        minSdk 23
-        targetSdk 32
-        versionCode 1
-        versionName "1.0"
-
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-
-    buildTypes {
-        release {
-            minifyEnabled false
-        }
-    }
-    compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
-    }
-    kotlinOptions {
-        jvmTarget = '1.8'
-    }
-}
-
-dependencies {
-    implementation 'androidx.core:core-ktx:1.7.0'
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-
-    implementation project(':base')
-    implementation project(':f-splash')
-}*/
-
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
@@ -73,11 +30,15 @@ android {
 
 dependencies {
     implementation project(':base')
-    implementation project(':i_navigation')
     implementation project(':f_start')
     implementation project(':f_auth')
     implementation project(':f_main')
+    implementation project(':f_feed')
+    implementation project(':f_search')
+    implementation project(':f_chats')
+    implementation project(':f_profile')
     implementation project(':f_book_detail')
+    implementation project(':i_navigation')
 
     implementation lang.kotlinStdLib
     implementation lang.jetbrainsAnnotations
