--- a/settings.gradle
+++ b/settings.gradle
@@ -11,4 +11,5 @@ include ':app',
         ':f_feed',
         ':f_search',
         ':f_profile',
-        ':f_chats'
+        ':f_chats',
+        ':i_network'
