--- a/build.gradle
+++ b/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 
     dependencies {
         classpath "com.android.tools.build:gradle:${versions.gradlePluginVersion}"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:${versions.kotlinVersion}"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.6.10"
         classpath "com.google.gms:google-services:${versions.googleServicesVersion}"
         classpath "com.gradle:build-scan-plugin:${versions.buildScanPluginVersion}"
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.41"
