--- a/commonInteractorModule.gradle
+++ b/commonInteractorModule.gradle
@@ -2,4 +2,15 @@ apply from: '../commonModule.gradle'
 
 dependencies {
     implementation project(":base")
+
+    // retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    // okhttp
+    implementation(platform("com.squareup.okhttp3:okhttp-bom:4.9.3"))
+
+    implementation("com.squareup.okhttp3:okhttp")
+    implementation("com.squareup.okhttp3:logging-interceptor")
 }
