--- a/i_auth/build.gradle
+++ b/i_auth/build.gradle
@@ -1,2 +1,7 @@
 apply from: '../commonInteractorModule.gradle'
 apply from: '../commonKaptModule.gradle'
+
+dependencies {
+    implementation project(":i_network")
+    implementation project(":i_token")
+}
