Сетевой слой с заглушкой

--- a/settings.gradle
+++ b/settings.gradle
@@ -13,4 +13,5 @@ include ':app',
         ':f_profile',
         ':f_chats',
         ':i_network',
-        ':i_token'
+        ':i_token',
+        ':i_profile'
