--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,7 @@ dependencies {
     implementation project(':i_navigation')
     implementation project(':i_network')
     implementation project(':i_auth')
+    implementation project(':i_profile')
 
     implementation lang.kotlinStdLib
     implementation lang.jetbrainsAnnotations
