--- a/settings.gradle
+++ b/settings.gradle
@@ -14,5 +14,5 @@ include ':app',
         ':i_network',
         ':i_token',
         ':i_profile',
-        ':f_books_list'
-
+        ':f_books_list',
+        ':f_reviews_list'
