--- a/commonAndroidDefaultConfig.gradle
+++ b/commonAndroidDefaultConfig.gradle
@@ -34,6 +34,8 @@ dependencies {
     // Kotlin
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
     implementation "androidx.navigation:navigation-ui-ktx:$nav_version"
+
+    implementation 'com.github.bumptech.glide:glide:4.13.0'
 }
 
 task printTestInstrumentationRunnerName {
