--- a/i_profile/build.gradle
+++ b/i_profile/build.gradle
@@ -3,4 +3,5 @@ apply from: '../commonKaptModule.gradle'
 
 dependencies {
     implementation project(":i_network")
+    implementation project(":i_token")
 }
