--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ allprojects {
         mavenCentral()
         maven { url 'https://jitpack.io' }
         maven { url "https://artifactory.surfstudio.ru/artifactory/libs-release-local" }
+        maven { url "https://search.maven.org/search?q=g:ru.surfstudio.android" }
     }
 }
 
