--- a/commonInteractorModule.gradle
+++ b/commonInteractorModule.gradle
@@ -2,6 +2,8 @@ apply from: '../commonModule.gradle'
 
 dependencies {
     implementation project(":base")
+    implementation project(":i_network")
+    implementation project(":i_token")
 
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
