--- a/settings.gradle
+++ b/settings.gradle
@@ -15,4 +15,5 @@ include ':app',
         ':i_token',
         ':i_profile',
         ':f_books_list',
-        ':f_reviews_list'
+        ':f_reviews_list',
+        ':i_feed'
