--- a/f_feed/build.gradle
+++ b/f_feed/build.gradle
@@ -3,4 +3,5 @@ apply from: '../commonKaptModule.gradle'
 
 dependencies {
     implementation project(":i_feed")
+    implementation project(":i_profile")
 }
