--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,5 @@
 apply from: 'config.gradle'
+
 include ':app',
         ':base',
         ':f_start',
@@ -17,4 +18,5 @@ include ':app',
         ':f_books_list',
         ':f_reviews_list',
         ':i_feed',
-        ':f_write_review'
+        ':f_write_review',
+        ':i_review'
