--- a/f_write_review/build.gradle
+++ b/f_write_review/build.gradle
@@ -1,2 +1,6 @@
 apply from: '../commonFeatureModule.gradle'
 apply from: '../commonKaptModule.gradle'
+
+dependencies {
+    implementation project(":i_review")
+}
