--- a/f_book_detail/build.gradle
+++ b/f_book_detail/build.gradle
@@ -3,4 +3,5 @@ apply from: '../commonKaptModule.gradle'
 
 dependencies {
     implementation project(":i_profile")
+    implementation project(":i_review")
 }
