--- a/f_feed/build.gradle
+++ b/f_feed/build.gradle
@@ -2,6 +2,6 @@ apply from: '../commonFeatureModule.gradle'
 apply from: '../commonKaptModule.gradle'
 
 dependencies {
-    implementation project(":i_feed")
+    implementation project(":i_books")
     implementation project(":i_profile")
 }
