--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,6 @@ include ':app',
         ':i_profile',
         ':f_books_list',
         ':f_reviews_list',
-        ':i_feed',
+        ':i_books',
         ':f_write_review',
         ':i_review'
