--- a/f_auth/build.gradle
+++ b/f_auth/build.gradle
@@ -3,4 +3,5 @@ apply from: '../commonKaptModule.gradle'
 
 dependencies {
     implementation project(':i_auth')
+    implementation project(':i_profile')
 }
