--- a/f_start/src/main/AndroidManifest.xml
+++ b/f_start/src/main/AndroidManifest.xml
@@ -11,6 +11,7 @@
         <activity
             android:name="com.litreview.f_start.MainActivity"
             android:exported="true"
+            android:windowSoftInputMode="adjustNothing"
             android:theme="@style/Theme.LitReview">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
