--- a/commonModule.gradle
+++ b/commonModule.gradle
@@ -67,4 +67,8 @@ dependencies {
     implementation 'com.github.kirich1409:viewbindingpropertydelegate:1.5.3'
 
     implementation "ru.surfstudio.android:easyadapter:7.0.1"
+
+    // Firebase
+    implementation platform('com.google.firebase:firebase-bom:30.1.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
 }
